[package]
name = "webdav-handler"

# When releasing to crates.io:
# - Update html_root_url in src/lib.rs
# - Update CHANGELOG.md.
# - Run ./generate-readme
# - Create git tag v0.x.y
version = "0.2.0"

readme = "README.md"
description = "handler for the HTTP and Webdav protocols with filesystem backend"
documentation = "https://docs.rs/webdav-handler"
repository = "https://github.com/miquels/webdav-handler-rs"
homepage = "https://github.com/miquels/webdav-handler-rs"
authors = ["Miquel van Smoorenburg <mike@langeraar.net>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["webdav"]
categories = ["web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]

[lib]
name = "webdav_handler"
path = "src/lib.rs"

[features]
default = []
actix-compat = [ "actix-web" ]
warp-compat = [ "warp" ]
all = [ "actix-compat", "warp-compat" ]

[[example]]
name = "actix"
required-features = [ "actix-compat" ]

[[example]]
name = "warp"
required-features = [ "warp-compat" ]

[dependencies]
bytes = "1.5.0"
futures = "0.3.29"
handlebars = "4.5.0"
headers = "0.4.0"
htmlescape = "0.3.1"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
lazy_static = "1.4.0"
libc = "0.2.150"
log = "0.4.20"
lru = "0.12.1"
mime_guess = "2.0.4"
parking_lot = "0.12.1"
percent-encoding = "2.3.1"
pin-project = "1.1.3"
pin-utils = "0.1.0"
regex = "1.10.2"
tokio = { version = "1.34.0", features = [ "rt-multi-thread", "io-util", "net", "time", "sync" ] }
time = { version = "0.3.30", default-features = false, features = ["formatting", "local-offset"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
xml-rs = "0.8.19"
xmltree = "0.10.3"

hyper = {version = "1.1.0", optional = true }
warp = { version = "0.3.6", optional = true }
actix-web = { version = "4.4.1", optional = true }

[dev-dependencies]
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
hyper = { version = "1.1.0", features = [ "http1", "http2", "server" ] }
hyper-util = { version = "0.1.2", features = [ "http1", "http2", "server", "server-auto", "tokio" ] }
tokio = { version = "1.34.0", features = ["full"] }
time = { version = "0.3.30", default-features = false, features = ["local-offset"] }

